--- a/www/css/active_style.css
+++ b/www/css/active_style.css
@@ -1,15 +1,18 @@
+/*** MAPS ***/
 .google-maps {
     width: 100%;
     height: 500px;
     z-index: 10000;
 }
 
+/*** LOGO ***/
 .center-img {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
+/*** COLLAGE ***/
 /*
 html, body{
     height: 95%;
