--- a/www/partials/imageSlider.html
+++ b/www/partials/imageSlider.html
@@ -1,5 +1,8 @@
 <ion-view title="{{tourGet(tourID).tour_title}}">
     <ion-nav-buttons side='right'>
+        <button class="button button-icon button-clear" ng-click="toggleMap()">
+            <img src="img/map.png" height="30px"/>
+        </button>
         <button class="button button-icon button-clear" ng-click="loadAR()">Start ARTour</button>
     </ion-nav-buttons>
     <ion-content delegate-handle="sliderScroll">
