--- a/www/partials/favorites.html
+++ b/www/partials/favorites.html
@@ -1,6 +1,9 @@
 <ion-view title="My Favorites">
     <ion-content>
         <div class="list">
+            <div class="item" ng-show="favoriteArt.length==0">
+                No favorites selected
+            </div>
             <div class="item" ui-sref="tour.artDetail({artID:{{item.artwork_id}}})" ng-repeat="item in favoriteArt">
                 {{item.title}}
             </div>
