Fix ghosting icon issue.
Rename imageSlider.

--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -1,29 +1,8 @@
-<!--
 <ion-view title="{{detailArt.title}}"> 
-    <ion-content>
-        <div class="list card">
-            <img class="item" ng-src="{{genImList(detailArt)}}" style="width:100%; min-width: 250px;">
-            <div class="item item-text-wrap">
-                <h1>{{detailArt.title}}</h1>
-                <h2>{{detailArt.artist_name}}</h2>
-                <br/>
-                <p ng-hide="!detailArt.description || detailArt.description==''">{{detailArt.description}}</p>
-                <br/>
-                <p ng-hide="!detailArt.location_name || detailArt.location_name==''">Location: {{detailArt.location_name}}</p>
-                <p ng-hide="!detailArt.medium || detailArt.medium==''">Medium: {{detailArt.medium}}</p>
-                <p ng-hide="!detailArt.dimensions || detailArt.dimensions==''">Dimensions: {{detailArt.dimensions}}</p>
-            </div>
-        </div>
-    </ion-content>
-</ion-view>-->
-
-<ion-view title="{{detailArt.title}}"> 
-    <ion-nav-buttons side='right'>
-        <button class="button button-icon button-clear" ng-show="!isFavorite" ng-click="markFavorite()">
-            <img src="img/fav_no.svg" height="30px"/>
-        </button>
-        <button class="button button-icon button-clear" ng-show="isFavorite" ng-click="markNotFavorite()">
-            <img src="img/fav_yes.svg" height="30px"/>
+    <ion-nav-buttons side='right' ng-controller="favoriteCtrl">
+        <button class="button button-icon button-clear" ng-click="toggleFavorite()">
+            <img src="img/fav_no.svg" height="30px" ng-show="!isFavorite"/>
+            <img src="img/fav_yes.svg" height="30px" ng-show="isFavorite"/>
         </button>
     </ion-nav-buttons>
     <ion-content delegate-handle="detailScroll">
