--- a/www/partials/menu.html
+++ b/www/partials/menu.html
@@ -38,5 +38,5 @@
 </ion-content>
 </ion-view>
 <ion-footer-bar align-title="left" class="bar-dark">
-    <img style="height: 100%; width: auto" class="center-img" src="img/HCLOGO2.png"/>
+    <img style="height: 100%; width: auto" class="center-img" src="img/uh-primary-white.png"/>
 </ion-footer-bar>
