--- a/www/partials/menu.html
+++ b/www/partials/menu.html
@@ -17,7 +17,7 @@
         <div ng-click="resizeScroll(); setToursOpen(!toursOpen());" class="item item-icon-left item-divider">
             <i ng-show="toursOpen()" class="icon ion-arrow-down-b"></i>
             <i ng-hide="toursOpen()" class="icon ion-arrow-right-b"></i>
-            Public Art Tours
+            Tours
         </div>
         <a ng-show="toursOpen()" ui-sref="tour.imslide({tourID:{{tour.tour_id}}})" ng-repeat="tour in toursGet() | filter: query" class="item" menu-close nav-clear>
             <h3>{{tour.tour_title}}</h3>
