changed font to MiloOTLight
color is now the light blue from original arTour design #6798AC

using map icon (svg) as replacement for "Start Tour"

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -15,6 +15,14 @@ $royal:                           #8a6de9 !default;
 $dark:                            #444 !default;
 */
 
+
+$font-family-milo:                MiloOTLight !default;
+$font-family-base:                $font-family-milo !default;
+
+$dark:                            #6798AC;
+$bar-dark-border:                 $dark;  
+
+
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
