--- a/www/css/active_style.css
+++ b/www/css/active_style.css
@@ -56,7 +56,7 @@ html, body{
     background: #000;
     height: 70px;
     margin-bottom: 2px;
-    background: rgba(68, 68, 68, .9);
+    background: #6798AC;
     color: #FFF;
     padding: 0px;
     text-align: center;
