--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -1,6 +1,8 @@
 <ion-view title="AR Tours">
     <ion-nav-buttons side='right'>
-        <button class="button button-icon button-clear" ng-click="loadAR()">Start ARTour</button>
+        <button class="button button-icon button-clear" ng-click="loadAR()">
+            <img src="img/map.svg" height="30px"/>
+        </button>
     </ion-nav-buttons>
     <ion-content>
         <div class="box">
