--- a/www/partials/collageView.html
+++ b/www/partials/collageView.html
@@ -5,7 +5,7 @@
         </button>
         <button class="button button-icon button-clear" ng-click="loadAR()">Start ARTour</button>
     </ion-nav-buttons>
-    <ion-content delegate-handle="sliderScroll">
+    <ion-content delegate-handle="sliderScroll" style="background: rgba(104, 152, 172, 0.1)">
         <div class="box">
             <div class="photo_container" ng-repeat="artOb in artworkGet(tourID)" ui-sref="tour.artDetail({artID:{{artOb.artwork_id}}})">
                 <img ng-src="{{genImList(artOb)}}" />
