--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -1,12 +1,16 @@
-<ion-view title="AR Tours">
+<ion-view title="">
     <ion-nav-buttons side='right'>
+        <label class="item-input-wrapper" style="height: 35px">
+            <i class="icon ion-ios7-search placeholder-icon"></i>
+            <input ng-model="query" type="search" placeholder="   Search" style="height: 23px">
+        </label>
         <button class="button button-icon button-clear" ng-click="loadAR()">
             <img src="img/map.svg" height="30px"/>
         </button>
     </ion-nav-buttons>
-    <ion-content>
+    <ion-content style="background: rgba(104, 152, 172, 0.1)">
         <div class="box">
-            <div class="photo_container" ng-repeat="artOb in artworkGet(tourID)" ui-sref="tour.artDetail({artID:{{artOb.artwork_id}}})">
+            <div class="photo_container" ng-repeat="artOb in artworkGet(tourID) | filter:query" ui-sref="tour.artDetail({artID:{{artOb.artwork_id}}})">
                 <img ng-src="{{genImList(artOb)}}" />
                 <div id="titleBox">{{artOb.title}}</div>
             </div>
