--- a/www/partials/favorites.html
+++ b/www/partials/favorites.html
@@ -1,17 +1,19 @@
 <ion-view title="My Favorites">
-    <ion-content>
-        <div class="list">
-            <div class="item" ng-show="favoriteArt.length==0">
-                No favorites selected
-            </div>
-            <div class="item item-thumbnail-left item-button-right" ng-repeat="item in favoriteArt">
-                <img ng-src="{{genImList(item)}}" />
-                <h2 ui-sref="tour.artDetail({artID:{{item.artwork_id}}})">{{item.title}}</h2>
-                <p>{{item.artist_name}}</p>
-                <button class="button button-clear button-dark" ng-click="deleteFavorite(item.artwork_id)">
-                    <i class="icon ion-ios-trash"></i>
-                </button>
-            </div>
+<ion-content>
+<div class="item" ng-show="favoriteArt.length==0">
+    No favorites selected
+</div>
+<div class="box">
+    <div class="photo_container" ng-repeat="artOb in favoriteArt | filter:query" ui-sref="tour.artDetail({artID:{{artOb.artwork_id}}})">
+        <img img-cache ic-src="{{genImList(artOb)}}" />
+        <div id="titleBox">
+            {{artOb.title}}
+            <br/>
+            <button class="button button-clear button-dark" ng-click="deleteFavorite(item.artwork_id)">
+                <i class="icon ion-ios-trash-outline" style="color:white"></i>
+            </button>
         </div>
-    </ion-content>
+    </div>
+</div>
+</ion-content>
 </ion-view>
