--- a/www/partials/menu.html
+++ b/www/partials/menu.html
@@ -9,19 +9,19 @@
             My Favorites
         </a>
         <div ng-click="resizeScroll(); setToursOpen(!toursOpen());" class="item item-icon-left item-divider">
-            <i ng-show="toursOpen()" class="icon ion-arrow-down-b"></i>
-            <i ng-hide="toursOpen()" class="icon ion-arrow-right-b"></i>
+            <i ng-hide="toursOpen()" class="icon ion-arrow-down-b"></i>
+            <i ng-show="toursOpen()" class="icon ion-arrow-right-b"></i>
             Tours
         </div>
-        <a ng-show="toursOpen()" ui-sref="tour.collage({tourID:{{tour.tour_id}}})" ng-repeat="tour in toursGet()" class="item" menu-close nav-clear>
+        <a ng-hide="toursOpen()" ui-sref="tour.collage({tourID:{{tour.tour_id}}})" ng-repeat="tour in toursGet()" class="item" menu-close nav-clear>
             <h3>{{tour.tour_title}}</h3>
         </a>
         <div ng-click="resizeScroll(); setArtworkOpen(!artworkOpen());" class="item item-icon-left item-divider">
-            <i ng-show="artworkOpen()" class="icon ion-arrow-down-b"></i>
-            <i ng-hide="artworkOpen()" class="icon ion-arrow-right-b"></i>
+            <i ng-hide="artworkOpen()" class="icon ion-arrow-down-b"></i>
+            <i ng-show="artworkOpen()" class="icon ion-arrow-right-b"></i>
             Artwork
         </div>
-        <a ng-show="artworkOpen()" ui-sref="tour.artDetail({artID:{{item.artwork_id}}})" ng-repeat="item in artworkGet()" class="item" menu-close nav-clear>
+        <a ng-hide="artworkOpen()" ui-sref="tour.artDetail({artID:{{item.artwork_id}}})" ng-repeat="item in artworkGet()" class="item" menu-close nav-clear>
             <h3>{{item.title}}</h3>
         </a>
         <div class="item card item-text-wrap">
