-Added fallback for image caching. -Added imagecache directive to artwork detail. -Added more icons in headers -Removed conflicting map icons -Removed gradient from button in AR and made it bigger.

--- a/www/partials/collageView.html
+++ b/www/partials/collageView.html
@@ -3,7 +3,7 @@
         <button class="button button-icon button-clear" ng-click="toggleMap()">
             <img src="img/map.png" height="30px"/>
         </button>
-        <button class="button button-icon button-clear" ng-click="loadAR()">Start ARTour</button>
+        <button class="button button-icon button-clear ion-camera" ng-click="loadAR()"></button>
     </ion-nav-buttons>
     <ion-content delegate-handle="sliderScroll" style="background: rgba(104, 152, 172, 0.1)">
         <div class="box">
