--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -4,9 +4,7 @@
             <i class="icon ion-ios7-search placeholder-icon"></i>
             <input ng-model="query" type="search" placeholder="   Search" style="height: 23px">
         </label>
-        <button class="button button-icon button-clear" ng-click="loadAR()">
-            <img src="img/map.svg" height="30px"/>
-        </button>
+        <button class="button button-icon button-clear ion-camera" ng-click="loadAR()"></button>
     </ion-nav-buttons>
     <ion-content style="background: rgba(104, 152, 172, 0.1)">
         <div class="box">
