--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -1,12 +1,14 @@
 <ion-view title=""> 
     <ion-nav-buttons side='right'>
-        <button class="button button-icon button-clear" ng-show="ARModeActive" ng-click="returnToAR()">
-            <img src="img/map.svg" height="30px"/>
+        <button class="button button-icon button-clear" ng-click="toggleMap()">
+            <img src="img/map.png" height="30px"/>
         </button>
+        <button class="button button-icon button-clear ion-camera" ng-hide="ARModeActive" ng-click="loadAR()"></button>
+        <button class="button button-icon button-clear ion-camera" ng-hide="ARModeActive" ng-click="returnToAR()"></button>
     </ion-nav-buttons>
     <ion-content delegate-handle="detailScroll">
         <div class="list card">
-            <img class="item" ic-src="{{genImList(detailArt)}}" style="width:100%; min-width: 250px;">
+            <img img-cache class="item" ic-src="{{genImList(detailArt)}}" style="width:100%; min-width: 250px;">
             <div class="item item-text-wrap">
                 <h1 ng-controller="favoriteCtrl">
                     {{detailArt.title}}
