--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -4,7 +4,7 @@
             <img src="img/map.png" height="30px"/>
         </button>
         <button class="button button-icon button-clear ion-camera" ng-hide="ARModeActive" ng-click="loadAR()"></button>
-        <button class="button button-icon button-clear ion-camera" ng-hide="ARModeActive" ng-click="returnToAR()"></button>
+        <button class="button button-icon button-clear ion-camera" ng-show="ARModeActive" ng-click="returnToAR()"></button>
     </ion-nav-buttons>
     <ion-content delegate-handle="detailScroll">
         <div class="list card">
