--- a/www/partials/favorites.html
+++ b/www/partials/favorites.html
@@ -1,4 +1,9 @@
 <ion-view title="My Favorites">
+<ion-nav-buttons side='right' ng-controller="arCtrl">
+    <button class="button button-icon button-clear" ng-click="loadAR(favoriteArt, 'Favorite Tour', -1)" style="padding-top: 5px">
+            <img src="img/aricon.png" height="20px"/>
+    </button>
+</ion-nav-buttons>
 <ion-content>
 <div class="item" ng-show="favoriteArt.length==0">
     No favorites selected
