--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -1,10 +1,12 @@
 <ion-view title="">
-    <ion-nav-buttons side='right'>
+    <ion-nav-buttons side='right' ng-controller="arCtrl">
         <label class="item-input-wrapper" style="height: 35px">
             <i class="icon ion-ios7-search placeholder-icon"></i>
             <input ng-model="query" type="search" placeholder="   Search" style="height: 23px">
         </label>
-        <button class="button button-icon button-clear ion-camera" ng-click="loadAR()"></button>
+        <button class="button button-icon button-clear" ng-click="loadAR(artworkGet(tourID), 'All Artwork', 0)" style="padding-top: 5px">
+            <img src="img/aricon.png" height="20px"/>
+        </button>
     </ion-nav-buttons>
     <ion-content style="background: rgba(104, 152, 172, 0.1)">
         <div class="box">
