--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -1,13 +1,13 @@
 <ion-view title=""> 
     <ion-nav-buttons side='right' ng-controller="arCtrl">
         <button class="button button-icon button-clear" ng-click="toggleMap()">
-            <img src="img/map.png" height="30px"/>
+            <img src="img/map.png" height="35px"/>
         </button>
         <button class="button button-icon button-clear" ng-hide="ARModeActive" ng-click="loadAR()" style="padding-top: 5px">
-            <img src="img/aricon.png" height="20px"/>
+            <img src="img/aricon.png" height="25px"/>
         </button>
-        <button class="button button-icon button-clear ion-camera" ng-show="ARModeActive" ng-click="returnToAR()">
-            <img src="img/aricon.png" height="20px"/>
+        <button class="button button-icon button-clear" ng-show="ARModeActive" ng-click="returnToAR()" style="padding-top: 5px">
+            <img src="img/aricon.png" height="25px"/>
         </button>
     </ion-nav-buttons>
     <ion-content delegate-handle="detailScroll">
