--- a/www/partials/favorites.html
+++ b/www/partials/favorites.html
@@ -1,7 +1,7 @@
 <ion-view title="My Favorites">
 <ion-nav-buttons side='right' ng-controller="arCtrl">
-    <button class="button button-icon button-clear" ng-click="loadAR(favoriteArt, 'Favorite Tour', -1)" style="padding-top: 5px">
-            <img src="img/aricon.png" height="20px"/>
+    <button class="button button-icon button-clear" ng-click="loadAR(favoriteArt, 'Favorite Tour', -1)">
+            <img src="img/aricon.png" height="32px"/>
     </button>
 </ion-nav-buttons>
 <ion-content>
