Improved the about page a little bit. Still working.

--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -1,5 +1,22 @@
-<ion-view title="About">
+<ion-view title="">
 <ion-content>
-    More details to come...
+    <div class="card">
+        <h2>The Collection</h2>
+        <p>In 1969, the Texas legislature voted to enact 1% for art for University of Houston. UH was the first state institution to establish a percent for art program and currently has one of the largest and most impressive university art collections in the country. Today, the collection numbers over 500 artworks located throughout the UH System campuses.</p>
+        <p>With the help of the University’s System Wide Art Acquisition Committee comprised of UH Regents, UH System faculty and staff, local curators and community representatives, the collection continues to expand and include work by regional, national and international artists.</p>
+    </div>
+    <div class="card">
+        <h2>The App</h2>
+        <p>The tour app is intended to enhance the experience of students, alumni, and those interested in the University of Houston's public art collection by supplying relevent information on the artwork, as well as pathfinding tools to help in locating each piece.</p>
+        <p>The tour app was created by Data Analytics in Student Hands (DASH), an Honors College organization dedicated to <b>INSERT STUFF HERE I DON'T KNOW</b> with contributions by Suneil Tandon, Carl Stephen, Timothy Brown, Dan Vo, and Isme Correa.</p>
+    </div>
+    <div class="card">
+        <h2>External Resources</h2>
+        <p>A new web site has been developed that will continue to expand with the ever growing collection.  A map and walking tour of the central campus is available online <a href="http://uh.edu/uh-collection">here</a>. We are also on Facebook <a href="https://www.facebook.com/pages/University-of-Houston-Public-Art-Collection/174240729070">here</a>.</p>
+    </div>
+    <div class="card">
+        <h2>Contact Info</h2>
+        <p>For further information you can contact Michael Guidry, Curator of the University Art Collection at mguidry3@uh.edu or 713-743-5315.</p>
+    </div>
 </ion-content>
 </ion-view>
