--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -1,5 +1,10 @@
 <ion-view title="">
 <ion-content>
+<!--
+    <div class="list-inset">
+        <img class="item" style="height: auto; width: 100%" class="center-img" src="img/PACLOGO.png"/>
+    </div>
+-->
     <div class="card">
         <h2>The Collection</h2>
         <p>In 1969, the Texas legislature voted to enact 1% for art for University of Houston. UH was the first state institution to establish a percent for art program and currently has one of the largest and most impressive university art collections in the country. Today, the collection numbers over 500 artworks located throughout the UH System campuses.</p>
@@ -8,7 +13,7 @@
     <div class="card">
         <h2>The App</h2>
         <p>The tour app is intended to enhance the experience of students, alumni, and those interested in the University of Houston's public art collection by supplying relevent information on the artwork, as well as pathfinding tools to help in locating each piece.</p>
-        <p>The tour app was created by Data Analytics in Student Hands (DASH), an Honors College organization dedicated to <b>INSERT STUFF HERE I DON'T KNOW</b> with contributions by Suneil Tandon, Carl Stephen, Timothy Brown, Dan Vo, and Isme Correa.</p>
+        <p>The tour app was created by Data Analytics in Student Hands (DASH), an Honors College organization with contributions by Suneil Tandon, Carl Stephen, Timothy Brown, Dan Vo, and Isme Correa.</p>
     </div>
     <div class="card">
         <h2>External Resources</h2>
