--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -1,8 +1,9 @@
 <ion-view title="">
+<!--
     <ion-nav-buttons side='right' ng-controller="arCtrl">
         <label class="item-input-wrapper" style="height: 35px">
             <i class="icon ion-ios7-search placeholder-icon"></i>
-<!--            $parent.query puts query in the $rootScope-->
+
             <input ng-model="$parent.query" type="search" placeholder="   Search" style="height: 23px">
         </label>
         <button class="button button-icon button-clear" ng-click="loadAR(artworkGet(tourID), 'All Artwork', 0)">
@@ -16,5 +17,9 @@
                 <div id="titleBox">{{artOb.title}}</div>
             </div>
         </div>
+    </ion-content>
+-->
+    <ion-content style="background: rgba(104, 152, 172, 0.1)">
+        
     </ion-content>
 </ion-view>
