fix map + ar view button, still overlap with menu button

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -14,6 +14,17 @@ $assertive:                       #ef4e3a !default;
 $royal:                           #8a6de9 !default;
 $dark:                            #444 !default;
 */
+.buttons.right-buttons span {
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  overflow: hidden;
+  padding-right: 0;
+  margin-right: 0; }
+
+.item-input-wrapper {
+  max-width: 45%; }
+
 /*!
   Ionicons, v1.5.2
   Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
