--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -18,9 +18,7 @@ $dark:                            #444 !default;
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  overflow: hidden;
-  padding-right: 0;
-  margin-right: 0; }
+  margin-right: -48px; }
 
 .item-input-wrapper {
   max-width: 45%; }
