--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7823,3 +7823,6 @@ $ios-transition-box-shadow-end: -200px 0px 200px rgba(0,0,0,0.15), -5px 0px 5px 
 .platform-c:not(.enable-transitions) * {
   -webkit-transition: none !important;
   transition: none !important; }
+
+.buttons.right-buttons span {
+  margin-right: auto !important; }
