--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -1,7 +1,14 @@
+<style type="text/css">
+    .buttons.right-buttons span {
+        margin-right: 0 !important;
+    }
+</style>
 <ion-view title=""> 
     <ion-nav-buttons side='right' ng-controller="arCtrl">
+        <label class="item-input-wrapper" style="display:none">
+        </label>
         <button class="button button-icon button-clear" ng-click="toggleMap()">
-            <img src="img/map.svg" height="35px"/>
+            <img src="img/map.svg" height="32px"/>
         </button>
         <button class="button button-icon button-clear" ng-hide="ARModeActive" ng-click="loadAR()">
             <img src="img/aricon.png" height="32px"/>
