--- a/www/partials/collageView.html
+++ b/www/partials/collageView.html
@@ -1,13 +1,17 @@
+<style type="text/css">
+    .buttons.right-buttons span {
+        margin-right: -37px;
+    }
+</style>
 <ion-view title="">
     <!-- <ion-nav-bar class="bar-dark"> {{tourGet(tourID).tour_title}}-->
     <ion-nav-buttons side='right' ng-controller="arCtrl">
         <label class="item-input-wrapper" style="height: 35px">
             <i class="icon ion-ios7-search placeholder-icon"></i>
-<!--            $parent.query puts query in the $rootScope-->
             <input ng-model="$parent.query" type="search" placeholder="   Search" style="height: 23px">
         </label>
         <button class="button button-icon button-clear" ng-click="toggleMap()">
-            <img src="img/map.svg" height="35px"/>
+            <img src="img/map.svg" height="32px"/>
         </button>
         <button class="button button-icon button-clear" ng-click="loadAR(artworkGet(tourID), tourGet(tourID).tour_title, tourID)">
             <img src="img/aricon.png" height="32px"/>
