Fix when choosing an image and go back

--- a/www/partials/collageView.html
+++ b/www/partials/collageView.html
@@ -1,8 +1,3 @@
-<style type="text/css">
-    .buttons.right-buttons span {
-        margin-right: -37px;
-    }
-</style>
 <ion-view title="">
     <!-- <ion-nav-bar class="bar-dark"> {{tourGet(tourID).tour_title}}-->
     <ion-nav-buttons side='right' ng-controller="arCtrl">
@@ -35,3 +30,8 @@
         </div>
     </ion-content>
 </ion-view>
+<style type="text/css">
+    .buttons.right-buttons span {
+        margin-right: -37px !important;
+    }
+</style>
