--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -26,6 +26,7 @@ $bar-dark-border:                 $dark;
 	display: -webkit-inline-flex;
 	display: -ms-inline-flexbox;
 	display: inline-flex;
+	margin-right: 0;
 }
 // .clearbothFix {clear:both;}
 .item-input-wrapper {max-width:45%}
