--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -17,7 +17,8 @@ $dark:                            #444 !default;
 .buttons.right-buttons span {
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
-  display: inline-flex; }
+  display: inline-flex;
+  margin-right: 0; }
 
 .item-input-wrapper {
   max-width: 45%; }
