--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -1,8 +1,3 @@
-<style type="text/css">
-    .buttons.right-buttons span {
-        margin-right: 0 !important;
-    }
-</style>
 <ion-view title=""> 
     <ion-nav-buttons side='right' ng-controller="arCtrl">
         <label class="item-input-wrapper" style="display:none">
@@ -74,3 +69,8 @@
         </div>
     </ion-content>
 </ion-view>
+<style type="text/css">
+    .buttons.right-buttons span {
+        margin-right: 0px !important;
+    }
+</style>
