--- a/www/partials/main.html
+++ b/www/partials/main.html
@@ -1,25 +1,3 @@
 <ion-view title="">
-<!--
-    <ion-nav-buttons side='right' ng-controller="arCtrl">
-        <label class="item-input-wrapper" style="height: 35px">
-            <i class="icon ion-ios7-search placeholder-icon"></i>
-
-            <input ng-model="$parent.query" type="search" placeholder="   Search" style="height: 23px">
-        </label>
-        <button class="button button-icon button-clear" ng-click="loadAR(artworkGet(tourID), 'All Artwork', 0)">
-            <img src="img/aricon.png" height="32px"/>
-        </button>
-    </ion-nav-buttons>
-    <ion-content style="background: rgba(104, 152, 172, 0.1)">
-        <div class="box">
-            <div class="photo_container" ng-repeat="artOb in artworkGet(tourID) | filter:query" ui-sref="tour.artDetail({artID:{{artOb.artwork_id}}})">
-                <img img-cache ic-src="{{genImList(artOb)}}" />
-                <div id="titleBox">{{artOb.title}}</div>
-            </div>
-        </div>
-    </ion-content>
--->
-    <ion-content style="background: rgba(104, 152, 172, 0.1)">
-        
-    </ion-content>
+    <ion-content style="background: rgba(104, 152, 172, 0.1)"></ion-content>
 </ion-view>
